Split fabric8 model build into a dedicated task, due to memory issues
Signed-off-by: Jamie Klassen <cklassen@pivotal.io>